--- a/SoftWare/STM32MCU/Dev/MDK-ARM/SoftWare.uvprojx
+++ b/SoftWare/STM32MCU/Dev/MDK-ARM/SoftWare.uvprojx
@@ -48,7 +48,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>SoftWare\</OutputDirectory>
-          <OutputName>SoftWare</OutputName>
+          <OutputName>SoftWareMcu</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
